[package]
name = "ssh-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.14"
termcolor = "1.1.2"
owo-colors = { version = "3", features = ["supports-colors"] }

openssh = { version = "0.9.0-rc.1", default-features = false, features = ["native-mux"] }
tokio = { version = "1.16.1", features = ["parking_lot", "io-util", "macros", "rt", "time", "signal"] }
num-integer = "0.1.44"
