[package]
name = "ssh-utils"
version = "0.1.0"
edition = "2021"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Utilities for ssh."
repository = "https://github.com/NobodyXu/ssh-utils"

keywords = ["ssh", "network"]
categories = ["network-programming"]

[dependencies]
clap = { version = "3.0.14", features = ["derive", "cargo"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.14"
owo-colors = { version = "3", features = ["supports-colors"] }

openssh = { version = "0.9.0-rc.1", default-features = false, features = ["native-mux"] }
tokio = { version = "1.16.1", features = ["parking_lot", "io-util", "macros", "rt", "time", "signal"] }
num-integer = "0.1.44"
